# contract_agent_capstone

./: .env.example  .gitignore  Agentic_ImplemenationPlan.md  README.md  SystemOverview.md  TODO.md  backend_logs.txt  base_architechture.mmd  docker-compose.yml  package-lock.json  pyrightconfig.json  runpod_guide.md  upload_error.txt  verify_upload.py
backend/: .env.example  Dockerfile  alembic.ini  contract_chat_agent.py  force_admin_reset.py  llm_manager.py  main.py  mcp_server.py  package-lock.json  pyproject.toml
backend/agents/: agent_workflow_tracker.py  agents_registry.py  auditor_agent.py  base_agent.py  chunking_agent.py  contract_intelligence_agents.py  enhanced_cuad_tools.py  enhanced_pdf_processing_agent.py  intelligence_state.py  optimized_cuad_tools.py  orchestrator_nodes.py  pdf_processing_agent.py  pdf_state.py  policy_agents.py
backend/agents/patterns/: advanced_rag_agent.py
backend/agents/supervisor/: adapters.py  supervisor_agent.py
backend/api/: analytics.py  contract_intelligence.py  contracts.py  document_upload.py  enhanced_contract_search.py  enhanced_document_upload.py  monitoring_api.py  strategic_api.py  supervisor_api.py
backend/application/services/: base_analytics_service.py  contract_intelligence_service.py  costing_service.py  document_processing_service.py  enhanced_document_processing_service.py  governance_service.py  kpi_service.py  strategic_service.py  system_health_manager.py
backend/auth/: admin_router.py  dependencies.py  jwt_service.py  models.py  password.py  rbac.py  repository.py  router.py  schemas.py  seed.py
backend/domain/: value_objects.py
backend/embeddings/: migrator.py  validator.py
backend/infrastructure/: audit_logger.py  contract_analyzer.py  contract_repository.py  embedding_service.py  mcp_client.py  policy_repository.py
backend/infrastructure/chunking/: chunk_embedding_service.py  (+3 more)
backend/logs/: agent_steps.jsonl
backend/mcp_extensions/: decorators.py
backend/migrations/: enterprise_schema_migration.py  multi_level_embeddings.py  user_profile_postgres.py
backend/scratch/: audit_imports.py
backend/shared/: compliance_service.py
backend/tests/: test_mcp_capabilities.py  test_mcp_integration.py
docs/: FLOW.md  (+5 more)
(+148 files in other folders)
